--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "json-loader": "^0.5.4",
     "nodemon": "^1.10.2",
     "react-router-redux": "^4.0.5",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
