--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-react-hot": "^1.0.4",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
@@ -23,13 +25,18 @@
     "chai": "^3.5.0",
     "enzyme": "^2.4.1",
     "jsdom": "^9.5.0",
+    "json-loader": "^0.5.4",
+    "jsx-loader": "^0.13.2",
     "mocha": "^3.0.2",
     "nodemon": "^1.10.2",
     "react-ace": "^3.5.0",
-    "sinon": "^1.17.5"
+    "react-hot-loader": "^3.0.0-beta.3",
+    "sinon": "^1.17.5",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.15.1"
   },
   "scripts": {
-    "start": "./node_modules/.bin/nodemon index",
+    "serve": "node server",
     "build": "./node_modules/.bin/webpack",
     "test": "./node_modules/.bin/nodemon --ext spec.js --watch ./src --watch ./test --exec 'NODE_ENV=test ./node_modules/.bin/mocha ./test/setup.js $(find src -name '*.spec.js')  --recursive --compilers js:babel-register --require ./test/config.js'"
   },
