--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-router-redux": "^4.0.5",
     "redux": "^3.6.0",
     "redux-logger": "^2.6.1",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "react-ace": "^3.5.0"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
@@ -29,7 +30,6 @@
     "jsx-loader": "^0.13.2",
     "mocha": "^3.0.2",
     "nodemon": "^1.10.2",
-    "react-ace": "^3.5.0",
     "react-hot-loader": "^3.0.0-beta.3",
     "sinon": "^1.17.5",
     "webpack": "^1.13.2",
