--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "cheerio": "^0.22.0",
     "json-loader": "^0.5.4",
     "nodemon": "^1.10.2",
+    "react-ace": "^3.5.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
     "react-router-redux": "^4.0.5",
     "redux": "^3.6.0",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
-    "react-ace": "^3.5.0"
+    "uuid": "^2.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
@@ -24,6 +25,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.14.0",
     "chai": "^3.5.0",
+    "css-loader": "^0.25.0",
     "enzyme": "^2.4.1",
     "jsdom": "^9.5.0",
     "json-loader": "^0.5.4",
@@ -32,6 +34,7 @@
     "nodemon": "^1.10.2",
     "react-hot-loader": "^3.0.0-beta.3",
     "sinon": "^1.17.5",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1"
   },
