--- a/package.json
+++ b/package.json
@@ -36,11 +36,12 @@
     "json-loader": "^0.5.4",
     "jsx-loader": "^0.13.2",
     "mocha": "^3.0.2",
+    "node-sass": "^3.9.3",
     "nodemon": "^1.10.2",
-    "react-addons-test-utils": "^15.3.1",
     "postcss-css-variables": "^0.5.2",
     "postcss-loader": "^0.13.0",
     "precss": "^1.4.0",
+    "react-addons-test-utils": "^15.3.1",
     "react-hot-loader": "^3.0.0-beta.3",
     "resolve-url": "^0.2.1",
     "sass-loader": "^4.0.2",
