--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
   },
   "scripts": {
     "start": "node server",
-    "build": "./node_modules/.bin/webpack --config ./webpack.prod.config.js --progress --colors",
+    "postinstall": "./node_modules/.bin/webpack --config ./webpack.prod.config.js --progress --colors",
     "test": "./node_modules/.bin/nodemon --ext spec.js --watch ./src --watch ./test --exec 'NODE_ENV=test ./node_modules/.bin/mocha ./test/setup.js $(find src -name '*.spec.js')  --recursive --compilers js:babel-register --require ./test/config.js'"
   },
   "author": "",
