--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "react-ace": "^3.5.0",
     "react-css-modules": "^3.7.10",
     "react-dom": "^15.3.1",
+    "react-hot-loader": "^1.3.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
     "react-router-redux": "^4.0.5",
     "redux": "^3.6.0",
+    "redux-localstorage": "^0.4.1",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
     "uuid": "^2.0.2"
@@ -37,6 +39,7 @@
     "jsdom": "^9.5.0",
     "json-loader": "^0.5.4",
     "jsx-loader": "^0.13.2",
+    "localStorage": "^1.0.3",
     "mocha": "^3.0.2",
     "node-sass": "^3.9.3",
     "nodemon": "^1.10.2",
@@ -56,7 +59,7 @@
   "scripts": {
     "start": "node server",
     "postinstall": "./node_modules/.bin/webpack --config ./webpack.prod.config.js --progress --colors",
-    "test": "./node_modules/.bin/nodemon --ext spec.js --watch ./src --watch ./test --exec 'NODE_ENV=test ./node_modules/.bin/mocha ./test/setup.js $(find src -name '*.spec.js')  --recursive --compilers js:babel-register --require ./test/config.js'"
+    "test": "./node_modules/.bin/nodemon --ext spec.js --watch ./src --watch ./test --exec 'NODE_ENV=test ./node_modules/.bin/mocha $(find src -name '*.spec.js')  --recursive --compilers js:babel-register --require ./test/config.js'"
   },
   "author": "",
   "license": "ISC"
