--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "dependencies": {
     "cheerio": "^0.22.0",
+    "font-awesome": "^4.6.3",
     "json-loader": "^0.5.4",
     "nodemon": "^1.10.2",
     "react": "^15.3.1",
     "react-ace": "^3.5.0",
+    "react-codemirror": "^0.2.6",
     "react-css-modules": "^3.7.10",
     "react-dom": "^15.3.1",
     "react-hot-loader": "^1.3.0",
@@ -35,6 +37,7 @@
     "css-loader": "^0.25.0",
     "css-modules-require-hook": "^4.0.2",
     "enzyme": "^2.4.1",
+    "file-loader": "^0.9.0",
     "ignore-styles": "^5.0.1",
     "jsdom": "^9.5.0",
     "json-loader": "^0.5.4",
@@ -52,6 +55,7 @@
     "sass-loader": "^4.0.2",
     "sinon": "^1.17.5",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1",
     "webpack-hot-middleware": "^2.12.2"
