--- a/package.json
+++ b/package.json
@@ -42,6 +42,14 @@
     "jsdom": "^9.5.0",
     "json-loader": "^0.5.4",
     "jsx-loader": "^0.13.2",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-mocha": "^1.1.1",
+    "karma-mocha-reporter": "^2.1.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.0",
     "localStorage": "^1.0.3",
     "mocha": "^3.0.2",
     "node-sass": "^3.9.3",
@@ -62,7 +70,8 @@
   },
   "scripts": {
     "start": "node server",
-    "postinstall": "./node_modules/.bin/webpack --config ./webpack.prod.config.js --progress --colors",
+    "postinstall": "./node_modules/.bin/webpack --config ./webpack/prod.config.js --progress --colors",
+    "test:karma": "./node_modules/.bin/karma start",
     "test": "./node_modules/.bin/nodemon --ext spec.js --watch ./src --watch ./test --exec 'NODE_ENV=test ./node_modules/.bin/mocha $(find src -name '*.spec.js')  --recursive --compilers js:babel-register --require ./test/config.js'"
   },
   "author": "",
