--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,9 @@
 {
   "presets": ["react", "es2015", "stage-0"],
-  "plugins": ["transform-decorators-legacy"]
+  "plugins": [
+    "transform-decorators-legacy",
+    "transform-async-to-generator",
+    "babel-plugin-transform-runtime",
+    "transform-flow-strip-types"
+  ]
 }
