--- a/package.json
+++ b/package.json
@@ -3,6 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "scripts": {
+    "start": "node server",
+    "flow": "./node_modules/.bin/nodemon --watch ./src --exec 'flow; test $? -eq 0 -o $? -eq 2'",
+    "postinstall": "./node_modules/.bin/webpack --config ./webpack/prod.config.js --progress --colors",
+    "test:karma": "./node_modules/.bin/karma start",
+    "test": "./node_modules/.bin/nodemon --ext spec.js --watch ./src --watch ./test --exec 'NODE_ENV=test ./node_modules/.bin/mocha $(find src -name '*.spec.js')  --recursive --compilers js:babel-register --require ./test/config.js'",
+    "lint": "./node_modules/.bin/eslint -c .eslintrc  src/",
+    "lint:watch": "./node_modules/.bin/nodemon --watch ./src --exec 'npm run lint'"
+  },
   "dependencies": {
     "cheerio": "^0.22.0",
     "font-awesome": "^4.6.3",
@@ -18,6 +27,7 @@
     "react-router": "^2.7.0",
     "react-router-redux": "^4.0.5",
     "redux": "^3.6.0",
+    "redux-catch-promise": "^1.0.3",
     "redux-localstorage": "^0.4.1",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
@@ -26,9 +36,13 @@
   "devDependencies": {
     "autoprefixer": "^6.4.1",
     "babel-cli": "^6.14.0",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
     "babel-plugin-react-hot": "^1.0.4",
+    "babel-plugin-transform-async-to-generator": "^6.8.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-flow-strip-types": "^6.14.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
@@ -37,8 +51,18 @@
     "css-loader": "^0.25.0",
     "css-modules-require-hook": "^4.0.2",
     "enzyme": "^2.4.1",
+    "eslint": "^3.6.0",
+    "eslint-config-airbnb": "^11.2.0",
+    "eslint-plugin-async-await": "0.0.0",
+    "eslint-plugin-babel": "^3.3.0",
+    "eslint-plugin-flowtype": "^2.19.0",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.3.0",
     "file-loader": "^0.9.0",
+    "flow-bin": "^0.32.0",
     "ignore-styles": "^5.0.1",
+    "install": "^0.8.1",
     "jsdom": "^9.5.0",
     "json-loader": "^0.5.4",
     "jsx-loader": "^0.13.2",
@@ -54,6 +78,7 @@
     "mocha": "^3.0.2",
     "node-sass": "^3.9.3",
     "nodemon": "^1.10.2",
+    "npm": "^3.10.8",
     "postcss-css-variables": "^0.5.2",
     "postcss-loader": "^0.13.0",
     "precss": "^1.4.0",
@@ -67,12 +92,6 @@
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1",
     "webpack-hot-middleware": "^2.12.2"
-  },
-  "scripts": {
-    "start": "node server",
-    "postinstall": "./node_modules/.bin/webpack --config ./webpack/prod.config.js --progress --colors",
-    "test:karma": "./node_modules/.bin/karma start",
-    "test": "./node_modules/.bin/nodemon --ext spec.js --watch ./src --watch ./test --exec 'NODE_ENV=test ./node_modules/.bin/mocha $(find src -name '*.spec.js')  --recursive --compilers js:babel-register --require ./test/config.js'"
   },
   "author": "",
   "license": "ISC"
